# Racing-Car-Katas---Python

./: README.md  pyproject.toml
tire_pressure_monitoring_system/: sensor.py  test_tire_pressure_monitoring.py  tire_pressure_monitoring.py
